[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Prosto_One/TitleBar.tres" type="DynamicFont" id=1]
[ext_resource path="res://Script/titleBar/titleBar.gd" type="Script" id=2]

[node name="Main Page" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="background" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tileBar" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 0.042
margin_bottom = -0.24
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="colour" type="ColorRect" parent="CanvasLayer/tileBar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.137255, 0.137255, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="Button" parent="CanvasLayer/tileBar/colour"]
anchor_left = 0.977
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.560059
custom_fonts/font = ExtResource( 1 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="-" type="Button" parent="CanvasLayer/tileBar/colour"]
anchor_left = 0.953
anchor_right = 0.977
anchor_bottom = 1.0
margin_left = 0.159912
margin_right = -0.560059
custom_fonts/font = ExtResource( 1 )
text = "_"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="MenuButton" parent="CanvasLayer/tileBar/colour"]
anchor_right = 0.039
anchor_bottom = 1.0
margin_right = -37.92
margin_bottom = -10.0
custom_fonts/font = ExtResource( 1 )
text = "File"
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="MenuButton" parent="CanvasLayer/tileBar/colour"]
margin_left = 50.0
margin_right = 86.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Edit"
switch_on_hover = true
[connection signal="mouse_entered" from="CanvasLayer/tileBar" to="CanvasLayer/tileBar" method="_on_tileBar_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/tileBar" to="CanvasLayer/tileBar" method="_on_tileBar_mouse_exited"]
[connection signal="button_up" from="CanvasLayer/tileBar/colour/X" to="CanvasLayer/tileBar" method="_on_X_button_up"]
[connection signal="button_up" from="CanvasLayer/tileBar/colour/-" to="CanvasLayer/tileBar" method="_on__button_up"]
